@@ -7,6 +7,13 @@
                                   Changelog
 
 
+Daniel S (3 Dec 2007)
+- Michal Marek introduced CURLOPT_PROXY_TRANSFER_MODE which is used to control
+  the appending of the "type=" thing on FTP URLs when they are passed to a
+  HTTP proxy. Some proxies just don't like that appending (which is done
+  unconditionally in 7.17.1), and some proxies treat binary/ascii transfers
+  better with the appending done!
+
 Daniel S (29 Nov 2007)
 - A bug report on the curl-library list showed a HTTP Digest session going on
   with a 700+ letter nonce. Previously libcurl only support 127 letter ones
